prevent content from going below 100% height (avoids odd zooming effects on iOS), also re-fix initial scroll bug on iOS using overflow auto -> visible, also use smaller font on modals

--- a/static/global.css
+++ b/static/global.css
@@ -1,6 +1,17 @@
 /* NOTE: this "static" file is not hot-reloaded by development server and may require a cache purge on clients that can be painful on iOS devices. Thus, putting global styles in svelte files (e.g. index.svelte) is preferable. */
-html {
-  -webkit-text-size-adjust: 100%; /* prevent font scaling in landscape in ios safari */
+html,
+body {
+  /* this fixes an odd initial scroll-down-on opening new tab from an existing tab */
+  /* however it also breaks scrolling unless we set overflow:"visible" from javascript */
+  /* it also does not fix an odd issue of initial render behind safari header on clicked tabs only */
+  /* inspired by https://stackoverflow.com/a/35675094 though not the same problem */
+  overflow: auto !important;
+
+  /* fix truncation of elements such as console, and avoid weird zoom/scroll effects on iOS */
+  height: 100% !important;
+
+  /* prevent font scaling in landscape in ios safari */
+  -webkit-text-size-adjust: 100%;
 }
 body {
   color: #ddd;
@@ -8,13 +19,4 @@ body {
   margin: 0; /* eliminate default margins around body */
   /* limit zoom gestures, see https://developer.mozilla.org/en-US/docs/Web/CSS/touch-action */
   touch-action: manipulation;
-}
-/* this fixes odd initial scroll on opening new tab, see https://stackoverflow.com/a/35675094 */
-/* not completely, on a small page we still have initial render behind safari translucent header */
-/* before it scrolls up, but there appears to be no way to fix or even detect this behavior */
-html,
-body {
-  -webkit-overflow-scrolling: touch !important;
-  /* overflow: auto !important; */
-  height: 100% !important;
 }
